--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Jasmine Lee</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="CSS/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS for the 'Full' Template -->
-    <link href="css/the-big-picture.css" rel="stylesheet">
+    <link href="CSS/the-big-picture.css" rel="stylesheet">
 
     <!-- Font --> 
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
